--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <select name="lista" id="lista"></select>
-        <button id="agregarLibro">Agregar al Carrito</button>
-        <button id="finalizarCompra">FINALIZAR COMPRA</button>
-
+    <h1>Kriya Yoga Libros</h1>
+    <div class="row" id="divProductos"></div>
+    <div class="botonFinalizar">
+        <button class="btn btn-warning btn-lg" id="finalizar">FINALIZAR COMPRA</button>
     </div>
-    <script src="js/ejemploDOM.js"></script>
+<!-- <img src="./image/libreria.jpg" alt="libreria"> -->
+    <script src="miarchivo.js"></script>
 </body>
 </html>
