--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-cl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Manrope:wght@300&family=Signika&display=swap" rel="stylesheet">
+    <!-- Link CSS -->
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title class >Kriya Yoga Libros</title>
 </head>
-<body>
-    <h1>Kriya Yoga Libros</h1>
-    <div class="row" id="divProductos"></div>
-    <div class="botonFinalizar">
-        <button class="btn btn-warning btn-lg" id="finalizar">FINALIZAR COMPRA</button>
+<body class="container">
+    <h1 class="text-center">Kriya Yoga Libros</h1>
+    <hr>
+    <div id="contenedorProductos" class="row"></div>
+    <!-- Carrito de Compras -->
+    <hr>
+    <div class="fondo">
+        <h2>Carrito de Compras</h2>
+        <h3>El total de la compra es de:<span id="total"></span></h3>
+        <button class="btn btn-primary" id="verCarrito">Ver Carrito</button>
+        <button class="btn btn-primary" id="vaciarCarrito">Vacias Carrito</button>
     </div>
-<!-- <img src="./image/libreria.jpg" alt="libreria"> -->
-    <script src="miarchivo.js"></script>
+    <div id="contenedorCarrito" class="row"></div>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="miarchivo.js"></script> 
 </body>
 </html>
