intento de Fetch

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>Carrito de Compras</h2>
         <h3>El total de la compra es de:<span id="total"></span></h3>
         <button class="btn btn-primary" id="verCarrito">Ver Carrito</button>
-        <button class="btn btn-primary" id="vaciarCarrito">Vacias Carrito</button>
+        <button class="btn btn-primary" id="vaciarCarrito">Vaciar Carrito</button>
     </div>
     <div id="contenedorCarrito" class="row"></div>
 
